<resources>
	<string name="app_name">NoteKeeper</string>
	<string name="action_send_mail">Send to Mail</string>
	<string name="note_title">Note Title</string>
	<string name="note">Note</string>
	<string name="title_activity_note_list">NoteListActivity</string>
	<string name="add_note">Add Note</string>
	<string name="edit_note">Edit Note</string>
	<string name="next">Next</string>
	<string name="close_nav_drawer">Close navigation drawer</string>
	<string name="open_nav_drawer">Open navigation drawer</string>
	<string name="notes">Notes</string>
	<string name="courses">Courses</string>

	<string name="settings">Settings</string>

	<!-- Preference Titles -->
	<string name="general_header">General</string>
	<string name="data_header">Data</string>

	<!-- General Preferences -->
	<string name="account_settings_key" translatable="false">key_account_settings</string>
	<string name="account_settings_title">Account Settings</string>
	<string name="account_settings_summary">Edit account settings</string>

	<!--Data preference-->
	<string name="storage_key" translatable="false">key_storage</string>
	<string name="storage_title">Default Storage</string>
	<string name="storage_default">My Notes</string>

	<string name="display_name_key" translatable="false">display_name_key</string>
	<string name="display_name_title">Display Name</string>
	<string name="display_name_default">Your Name</string>

	<string name="email_address_key" translatable="false">email_address_key</string>
	<string name="email_address_title">Email address</string>
	<string name="email_address_default">you@mail.com</string>

	<string name="favorite_social_key" translatable="false">favorite_social_key</string>
	<string name="favorite_social_title">Favorite social network</string>
	<string name="favorite_social_default">https://fb.com</string>
	<string name="profile_picture">Profile picture</string>

	<string name="action_reminde">Reminde me</string>
	<string name="review_note">Review note</string>


</resources>
